# janhke-emde

./: .envrc  .gitattributes  .gitignore  README.md  default.nix  flake.nix  from-sources.nix  nix  pyproject.toml  shell.nix
defs/: package.nix  pythonEnv.nix  useScipy1.15.nix
images/: structure.dot
nix/: flake-compat.nix  from-sources.nix  mkPythonSet.nix  overlay.nix
npins/: sources.json
src/: main.py
src/janhke_emde/: __init__.py  __main__.py  config.py  critical_points.py  functions.py  gradient_lines.py  level_curves.py  saddle_points.py  visualization.py
