[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "janhke_emde"
version = "0.1.0"
description = "Visualization of Jahnke-Emde surfaces with level curves and gradient lines."
authors = [{ name = "WeetHet", email = "stas.ale66@gmail.com" }]
dependencies = ["numpy", "scipy", "pyvista", "networkx", "numba"]

[project.scripts]
janhke_emde = "janhke_emde:main"
